--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:postgresql://pg2.sweb.ru:5432/narizhymai_tfs
+spring.datasource.username=narizhymai_tfs
+spring.datasource.password=PostgreSQL2020
